--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 11 09:52:18 CEST 2022
-sdk.dir=/Users/anthonygravat/Library/Android/sdk
+#Tue Oct 18 15:47:49 CEST 2022
+sdk.dir=C\:\\Users\\enzom\\AppData\\Local\\Android\\Sdk
